# kitefly

./: .coveragerc  .gitattributes  .gitignore  LICENSE.md  README.md  dev_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: test.yml
kitefly/: __init__.py  generate.py  git.py  run.py  targets.py  util.py
kitefly/filter/: __init__.py  filter.py  git_filter.py
kitefly/model/: __init__.py  agents.py  command.py  dictwrapper.py  env.py  group.py  input.py  pipeline.py  plugin.py  retry.py  step.py  target.py  trigger.py  wait.py
script/: bootstrap  lint  test  test-update-snapshots
src/kitefly/: __init__.py
src/kitefly/filter/: filter.py  git_filter.py  noop_filter.py
src/kitefly/model/: __init__.py  command.py  group.py  input.py  pipeline.py  plugin.py  target.py
tests/: conftest.py  test_git_filter.py  test_group.py  test_kitefly.py  test_snapshots.py  test_step.py  test_target.py  test_util.py
tests/__snapshots__/: full-example.yml  group-with-deps.yml  group.yml  one-step.yml
