[tool.poetry]
name = "kitefly"
version = "0.1.0"
description = "Dynamically generate Buildkite pipeline files with composable python models"
authors = ["Chris Carpita <ccarpita@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "2.7 || ^3.5"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
