[metadata]
name = kitefly
version = attr: kitefly.__version__
author = Chris Carpita
author_email = ccarpita@gmail.com
url = https://github.com/pytown/kitefly
project_urls = 
    Bug Tracker = https://github.com/pytown/kitefly/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Generate Buildkite YAML with composable type-checked models
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.7
package_dir = 
    = src
packages = find:
install_requires =
    pyyaml

[options.packages.find]
where = src
